# shellpass

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  dist-workspace.toml  justfile  oranda.json
.github/workflows/: pages.yaml  release.yml
src/: cli_args.rs  clipboard.rs  default_vault_dir_path.rs  errors.rs  errors_builder.rs  main.rs
src/app/: clip_timer.rs  edit_mode.rs  entry.rs  layout.rs  mod.rs  notification.rs  state.rs  vim_mode.rs
src/events/: mod.rs
src/events/edit_entry/: mod.rs  mouse.rs
src/events/edit_profile/: key.rs  mod.rs  mouse.rs
src/events/entry_detail/: key.rs  mod.rs  mouse.rs
src/events/entry_list/: key.rs  mod.rs  mouse.rs
src/events/profile_list/: key.rs  mod.rs  mouse.rs
src/events/unlock/: mod.rs  mouse.rs
src/ui/: clip_timer.rs  mod.rs  notification.rs  style.rs  utils.rs
src/ui/edit_entry/: mod.rs
src/ui/edit_profile/: mod.rs
src/ui/entry_detail/: mod.rs
src/ui/entry_list/: mod.rs
src/ui/profile_list/: mod.rs
src/ui/unlock/: mod.rs
src/vault/: crypto.rs  encrypted_vault.rs  mod.rs
src/vault/vault_data/: mod.rs
src/vault/vault_data/profile/: mod.rs
src/vault/vault_data/profile/entry/: field.rs  mod.rs
wix/: main.wxs
