[package]
name = "shellpass"
version = "0.1.0"
edition = "2024"

[dependencies]
# data handling
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
ciborium = "0.2.2"
uuid = { version = "1.23.0", features = ["v7", "serde"] }

# clipboard interaction
arboard = "3.6.1"

# tui
ratatui = "0.30.0"
crossterm = "0.29.0"

# random passwords
rand = "0.10.0"

# cli
clap = { version = "4.6.0", features = ["derive"] }

# get default dir path
dirs = "6.0.0"

# macros
paste = "1.0.15"
