[package]
name = "shellpass"
version = "0.0.6"
edition = "2024"
authors = ["tech0ne"]
description = "A TUI password manager, encrypted, writen in rust !"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tech0ne/shellpass"
homepage = "https://github.com/tech0ne/shellpass"

[package.metadata.wix]
upgrade-guid = "FAED4502-9AB9-4482-8E05-ECE9B5BFE5CE"
path-guid = "533446F0-046C-4E2A-8B7F-7ACC5F78838A"
license = false
eula = false

[dependencies]
# data handling
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
ciborium = "0.2.2"
uuid = { version = "1.23.0", features = ["v7", "serde"] }

# clipboard interaction
arboard = "3.6.1"

# tui
ratatui = "0.30.0"
crossterm = "0.29.0"

# random passwords
rand = "0.10.0"

# cli
clap = { version = "4.6.0", features = ["derive"] }

# get default dir path
dirs = "6.0.0"

# macros
paste = "1.0.15"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
